fix: weird scrollbar intersection on mobile sometimes

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -55,7 +55,7 @@ v-app {
 
 // scrollbar doesn't intersect navbar
 html {
-	overflow-y: hidden;
+	overflow: hidden;
 }
 .v-main {
 	width: 100%;
@@ -63,7 +63,7 @@ html {
 	top: 48px;
 	bottom: 0;
 	padding-top: 0 !important;
-	overflow-y: auto;
+	overflow: hidden auto;
 }
 
 // prevents white screen flashbang on dark themed browsers
